<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general">

        <Preference
            android:key="language"
            android:title="@string/lang"
            android:summary="@string/chooice_language"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/application">

        <Preference
            android:key="share"
            android:title="@string/share"
            android:summary="@string/share_friend"/>

        <Preference
            android:key="fav"
            android:title="@string/nav_favorite"
            android:summary="@string/fav"/>

        <Preference
            android:key="about"
            android:title="@string/about"
            android:summary="@string/about_summary"/>

    </PreferenceCategory>

</PreferenceScreen>